--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,14 @@ jobs:
 
    
     steps:
-     
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+            node-version: 14
+      - run: npm install -g
+      - run: npm install --frozen-lockfile
+      - run: npm build
+      
 
      
       
