updated worflow to configure AWS

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,23 @@
-
-
 name: Deploy
 
-
 on:
-  
   push:
-    branches: [ main ]
-  
-
+    branches: [main]
 
 jobs:
- 
   build:
-
     runs-on: ubuntu-latest
 
-   
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-            node-version: 14
+          node-version: 14
       - run: npm install -g
       - run: npm install --frozen-lockfile
       - run: npm run build
-      
-
-     
-      
+      - uses: aws-actions/configure-aws-credentials@v1
+    with:
+      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      aws-region: us-east-1
