--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
-      - |-
-        run:| npm install -g
-        run:| npm install --frozen-lockfile run:| npm build
-      - uses: aws-actions/configure-aws-credentials@v1
+      - name: Install NPM packages
+      - run: npm install -g
+      - name: Preserve Lockfile
+      - run: npm install --frozen-lockfile
+      - name: Build Packages
+      - run: npm build
       - name: Configure AWS credentials from Test account
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -27,7 +29,7 @@ jobs:
           aws-secret-access-key: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           aws-region: us-east-1
       - name: Copy files to the test website with the AWS CLI
-        "run:| aws": "s3 sync ./out s3://fatficolanding"
+      - run: aws s3 sync ./out s3://fatficolanding
 # name: Deploy
 
 # on:
