--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.5.0",
 		"@heroicons/react": "^1.0.5",
+		"@typeform/embed-react": "^1.9.0",
+		"alpinejs": "^3.9.0",
+		"cloudinary-build-url": "^0.2.4",
 		"next": "12.1.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2"
